# invest-tracker

./: .env.example  .gitignore  README.md  next.config.ts  package.json  push-to-github.sh  vercel.json
alpha-factory/: .env.example  (+4 more)
alpha-factory/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  verify_discovery.py  verify_ensemble.py
alpha-factory/backend/alembic/: env.py
alpha-factory/backend/alembic/versions/: 1718cacac144_initial_schema.py
alpha-factory/backend/app/: __init__.py  config.py  main.py
alpha-factory/backend/app/api/: schemas.py
alpha-factory/backend/app/backtest/: __init__.py  runner.py
alpha-factory/backend/app/data/: validator.py
alpha-factory/backend/app/db/: __init__.py  models.py  seed.py  session.py
alpha-factory/backend/app/discovery/: bt_simulator.py  engine.py  strategy_components.py  vector_researcher.py
alpha-factory/backend/app/ensemble/: engine.py
alpha-factory/backend/app/execution/: executor.py  paper_allocator.py  paper_trader.py
alpha-factory/backend/app/features/: __init__.py  engine.py
alpha-factory/backend/app/ingestor/: __init__.py  ccxt_ingestor.py  event_ingestor.py  ws_ingestor.py
alpha-factory/backend/app/labeling/: __init__.py  triple_barrier.py
alpha-factory/backend/app/llm/: client.py
alpha-factory/backend/app/monitor/: drift.py
alpha-factory/backend/app/observability/: metrics.py
alpha-factory/backend/app/regime/: __init__.py  detector.py
alpha-factory/backend/app/registry/: __init__.py  strategies.py
alpha-factory/backend/app/research/: __init__.py  lab.py  memory.py
(+99 files in other folders)
