[project]
name = "alpha-factory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis[hiredis]>=5.2",
  "ccxt>=4.4",
  "websockets>=13",
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "vectorbt>=0.26",
  "qdrant-client>=1.12",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "prometheus-client>=0.21",
  "httpx>=0.28",
  "pydantic-settings>=2.6",
  "openai>=1.54",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
